# rd2qmd

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  dist-workspace.toml  manifest
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check.yml  publish-crate.yml  release.yml
crates/mdast-rd2qmd/: Cargo.toml  README.md
crates/mdast-rd2qmd/src/: lib.rs  mdast.rs  writer.rs
crates/rd-parser/: Cargo.toml  README.md
crates/rd-parser/src/: ast.rs  lexer.rs  lib.rs  lifecycle.rs  parser.rs  roxygen.rs
crates/rd-parser/tests/: parser_snapshots.rs
crates/rd-parser/tests/fixtures/: basic.Rd  cite_abbr.Rd  conditionals.Rd  equations.Rd  escapes.Rd  examples.Rd  figures.Rd  formatting.Rd  lifecycle.Rd  links.Rd  lists.Rd  markdown_codeblock.Rd  methods.Rd  nested.Rd  new_tags.Rd  preformatted.Rd  sections.Rd  special_sections.Rd  tables.Rd
crates/rd-parser/tests/snapshots/: parser_snapshots__basic.snap  parser_snapshots__cite_abbr.snap  parser_snapshots__conditionals.snap  parser_snapshots__equations.snap  parser_snapshots__escapes.snap  parser_snapshots__examples.snap  parser_snapshots__figures.snap  parser_snapshots__formatting.snap  parser_snapshots__lifecycle.snap  parser_snapshots__links.snap  parser_snapshots__lists.snap  parser_snapshots__markdown_codeblock.snap  parser_snapshots__methods.snap  parser_snapshots__nested.snap  parser_snapshots__new_tags.snap  parser_snapshots__preformatted.snap  parser_snapshots__sections.snap  parser_snapshots__special_sections.snap  parser_snapshots__tables.snap
crates/rd2qmd-cli/: Cargo.toml
crates/rd2qmd-cli/examples/: benchmark.rs
crates/rd2qmd-cli/schema/: rd2qmd.schema.json
crates/rd2qmd-cli/src/: config.rs  main.rs
crates/rd2qmd-cli/tests/: integration.rs
crates/rd2qmd-cli/tests/fixtures/: example_control.Rd  examplesif.Rd  formatting.Rd  simple.Rd  with_links.Rd
crates/rd2qmd-cli/tests/snapshots/: integration__directory_files.snap  integration__example_control_qmd.snap  integration__examplesif_md.snap  integration__examplesif_qmd.snap  integration__formatting_qmd.snap  integration__init_config_toml.snap  integration__init_schema_json.snap  integration__simple_md.snap  integration__simple_no_frontmatter.snap  integration__simple_no_pagetitle.snap  integration__simple_qmd.snap  integration__with_links_qmd.snap
crates/rd2qmd-core/: Cargo.toml  README.md
crates/rd2qmd-core/src/: ast.rs  convert.rs  lexer.rs  lib.rs  mdast.rs  parser.rs  roxygen_code_block.rs  writer.rs
crates/rd2qmd-core/src/convert/: tests.rs
crates/rd2qmd-core/src/convert/snapshots/: rd2qmd_core__convert__tests__abbr_tag.snap  rd2qmd_core__convert__tests__arguments_grid_table_simple_snapshot.snap  rd2qmd_core__convert__tests__arguments_grid_table_with_lifecycle_badge_snapshot.snap  rd2qmd_core__convert__tests__arguments_grid_table_with_list_snapshot.snap  rd2qmd_core__convert__tests__arguments_pipe_table_snapshot.snap  rd2qmd_core__convert__tests__cite_tag.snap  rd2qmd_core__convert__tests__doi_tag.snap  rd2qmd_core__convert__tests__dontdiff_in_examples.snap  rd2qmd_core__convert__tests__link_s4class_tag.snap  rd2qmd_core__convert__tests__roxygen_code_block_conversion_snapshot.snap  rd2qmd_core__convert__tests__roxygen_code_block_with_backticks_in_content.snap  rd2qmd_core__convert__tests__s3method_tag.snap
crates/rd2qmd-core/src/snapshots/: rd2qmd_core__tests__rd_converter_alias_map.snap  rd2qmd_core__tests__rd_converter_exec_dontrun_default.snap  rd2qmd_core__tests__rd_converter_exec_dontrun_enabled.snap  rd2qmd_core__tests__rd_converter_exec_donttest_default.snap  rd2qmd_core__tests__rd_converter_exec_donttest_disabled.snap  rd2qmd_core__tests__rd_converter_external_package_urls.snap  rd2qmd_core__tests__rd_converter_unresolved_link_no_fallback.snap  rd2qmd_core__tests__rd_converter_unresolved_link_with_fallback.snap
crates/rd2qmd-mdast/: Cargo.toml
crates/rd2qmd-mdast/src/: lib.rs  mdast.rs  writer.rs
crates/rd2qmd-package/: Cargo.toml  README.md
crates/rd2qmd-package/src/: external_links.rs  lib.rs
