[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/user/rd2md"

[workspace.dependencies]
# Core dependencies
thiserror = "2"
anyhow = "1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }

# Parallel processing
rayon = "1"

# Serialization (for mdast compatibility)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Internal crates
rd2qmd-core = { path = "crates/rd2qmd-core" }
