[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/rd2qmd-cli"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/eitsupi/rd2qmd"

[workspace.dependencies]
# Core dependencies
thiserror = "2"
anyhow = "1"

# CLI dependencies
clap = { version = "4", features = ["derive"] }

# Parallel processing
rayon = "1"

# Serialization (for mdast compatibility)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# External link resolution (optional)
r-description = "0.3.7"
saphyr = "0.0.6"
reqwest = { version = "0.12", features = ["blocking"], default-features = false }
url = "2"

# Testing
insta = { version = "1", features = ["yaml"] }

# Internal crates
rd2qmd-core = { path = "crates/rd2qmd-core" }
rd2qmd-package = { path = "crates/rd2qmd-package" }
