[package]
name = "rd-parser"
description = "Parser for R Documentation (Rd) files"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
json = ["dep:serde_json"]
lifecycle = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
insta.workspace = true
