[package]
name = "rd-parser"
description = "Parser for R Documentation (Rd) files"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["parser-implementations"]

[features]
default = []
json = ["dep:serde_json"]
lifecycle = []
roxygen = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true
insta.workspace = true
