[package]
name = "rd2qmd"
description = "CLI tool to convert Rd files to Quarto Markdown"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rd2qmd"
path = "src/main.rs"

[dependencies]
rd2qmd-core.workspace = true
rd2qmd-package = { workspace = true, features = ["external-links"] }
rd-parser = { workspace = true, features = ["roxygen"] }
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
schemars.workspace = true

[dev-dependencies]
insta.workspace = true
