[package]
name = "rd2qmd-core"
description = "Core library for converting Rd files to Quarto Markdown"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rd2qmd-mdast.workspace = true
rd-parser = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true

[dev-dependencies]
insta.workspace = true
