[package]
name = "rd2qmd-core"
description = "Core library for converting Rd files to Quarto Markdown"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["text-processing"]

[features]
default = []
lifecycle = ["rd-parser/lifecycle"]
roxygen = ["rd-parser/roxygen"]

[dependencies]
rd2qmd-mdast.workspace = true
rd-parser = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
