[package]
name = "rd2qmd-mdast"
description = "mdast types and Quarto Markdown writer for rd2qmd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories = ["text-processing"]

[dependencies]
serde = { workspace = true }

[dev-dependencies]
serde_json.workspace = true
