[package]
name = "rd2qmd-package"
description = "Package-level operations for converting R documentation to Quarto Markdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
external-links = ["dep:r-description", "dep:saphyr", "dep:reqwest", "dep:url"]

[dependencies]
rd2qmd-core = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }

# Optional dependencies for external link resolution
r-description = { workspace = true, optional = true }
saphyr = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
